syntax = "proto3";

option csharp_namespace = "GrpcServe";

service Example {
  // Unary
  rpc UnaryCall (ExampleRequest) returns (ExampleResponse);

  rpc SayHello (ExampleRequest) returns (ExampleResponse);

  // Server streaming
  rpc StreamingFromServer (ExampleRequest) returns (stream ExampleResponse);

  // Client streaming
  rpc StreamingFromClient (stream ExampleRequest) returns (ExampleResponse);

  // Bi-directional streaming
  rpc StreamingBothWays (stream ExampleRequest) returns (stream ExampleResponse);
}

message ExampleRequest {
    string reqStr = 1;
}

message ExampleResponse{
    string result = 1;
}
